# sbk-gui

./: LICENSE.md  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: application-x-sbk.xml  deb-postinst.sh  deb-postrm.sh  sbk-extract-here.nemo_action  sbk-gui.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive_state.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: archive.rs  cancel.rs  extract.rs  extract_here.rs  mod.rs  open.rs  system.rs  verify.rs
src/components/AboutDialog/: AboutDialog.module.css  AboutDialog.tsx
src/components/ArchiveView/: ArchiveView.module.css  ArchiveView.tsx
src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
src/components/CoordinateSearch/: CoordinateSearch.module.css  CoordinateSearch.tsx
src/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
src/components/ErrorToast/: ErrorToast.module.css  ErrorToast.tsx
src/components/ExtractDialog/: ExtractDialog.module.css  ExtractDialog.tsx
src/components/ExtractHereView/: ExtractHereView.module.css  (+1 more)
src/hooks/: useGlobalShortcuts.ts  useKeyboard.ts  useMouseButtons.ts
src/locales/: de.json  en.json
src/store/: useArchiveStore.ts  useNavStore.ts  useSelectionStore.ts  useSettingsStore.ts  useUiStore.ts
src/styles/: global.css  tokens.css
src/utils/: format.ts  patterns.ts  virtualFs.ts
(+23 files in other folders)
