[package]
name = "sbk-gui"
version = "0.1.0"
edition = "2024"
authors = ["MelanX"]
license = "MIT"
description = "SBK archive browser"
repository = "https://github.com/ChaoticTrials/sbk-gui"
keywords = ["minecraft", "archive", "mca"]
categories = ["filesystem", "gui"]

[lib]
name = "sbk_gui_lib"
crate-type = ["rlib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sbk = "0.2"
open = "5"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
num_cpus = "1"

[profile.release]
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
